--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "tslint --project tsconfig.json --format codeFrame"
   },
   "dependencies": {
     "react": "16.6.3",
@@ -19,9 +20,25 @@
     "@types/react-native": "0.57.25",
     "@types/react-test-renderer": "16.0.3",
     "babel-jest": "23.6.0",
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.1.2",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.3",
+    "eslint-plugin-typescript": "^0.14.0",
+    "eslint-plugin-unicorn": "^6.0.1",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.1",
+    "prettier": "^1.15.3",
     "react-test-renderer": "16.6.3",
+    "tslint": "^5.12.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "tslint-react": "^3.6.0",
     "typescript": "3.2.2"
   },
   "jest": {
