--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "tslint --project tsconfig.json --format codeFrame"
   },
   "dependencies": {
+    "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-numeric-input": "^1.6.5",
