--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "lint": "tslint --project tsconfig.json --format codeFrame"
+    "lint": "tslint --project tsconfig.json --format codeFrame",
+    "lint-fix": "tslint --fix --project tsconfig.json"
   },
   "dependencies": {
     "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
-    "react-native-numeric-input": "^1.6.5",
     "react-native-vector-icons": "^6.1.0",
     "unstated": "^2.1.1"
   },
