--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "unstated": "^2.1.1"
   },
   "devDependencies": {
-    "@types/jest": "23.3.11",
+    "@types/jest": "^23.3.11",
     "@types/react": "16.7.18",
     "@types/react-native": "0.57.25",
     "@types/react-test-renderer": "16.0.3",
@@ -31,10 +31,11 @@
     "eslint-plugin-react": "^7.12.3",
     "eslint-plugin-typescript": "^0.14.0",
     "eslint-plugin-unicorn": "^6.0.1",
-    "jest": "23.6.0",
+    "jest": "^23.6.0",
     "metro-react-native-babel-preset": "0.51.1",
     "prettier": "^1.15.3",
     "react-test-renderer": "16.6.3",
+    "ts-jest": "^23.10.5",
     "tslint": "^5.12.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.17.0",
