--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-typescript": "^0.14.0",
     "eslint-plugin-unicorn": "^6.0.1",
     "jest": "^23.6.0",
+    "jest-enzyme": "^7.0.1",
     "jest-fetch-mock": "^2.1.0",
     "metro-react-native-babel-preset": "0.51.1",
     "prettier": "^1.15.3",
@@ -55,6 +56,9 @@
       "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js",
       "^.+\\.tsx?$": "ts-jest"
     },
+    "transformIgnorePatterns": [
+      "node_modules/(?!react-native|native-base-shoutem-theme|@shoutem/animation|@shoutem/ui|tcomb-form-native)"
+    ],
     "globals": {
       "ts-jest": {
         "tsConfig": "tsconfig.jest.json"
@@ -72,8 +76,6 @@
     "modulePaths": [
       "<rootDir>"
     ],
-    "setupFiles": [
-      "./tests/setup.js"
-    ]
+    "setupTestFrameworkScriptFile": "./tests/setup.js"
   }
 }
