--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,6 @@
     "declaration": true,
     "experimentalDecorators": true
   },
-  "include": [
-    "src/**/*"
-  ],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
