--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint-fix": "tslint --fix --project tsconfig.json"
   },
   "dependencies": {
+    "@types/react-navigation": "^3.0.1",
     "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-gesture-handler": "^1.0.12",
     "react-native-vector-icons": "^6.1.0",
+    "react-navigation": "^3.0.9",
     "unstated": "^2.1.1"
   },
   "devDependencies": {
