--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "editor.formatOnSave": true,
   "editor.tabSize": 2,
-  "tslint.configFile": "tslint.json"
+  "tslint.configFile": "tslint.json",
+  "importSorter.generalConfiguration.sortOnBeforeSave": true,
+  "importSorter.importStringConfiguration.hasSemicolon": false
 }
