--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-calendars": "^1.21.0",
     "react-native-gesture-handler": "^1.0.12",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9",
