--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint-fix": "tslint --fix --project tsconfig.json"
   },
   "dependencies": {
-    "@types/react-navigation": "^3.0.1",
     "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
@@ -25,6 +24,8 @@
     "@types/jest": "^23.3.11",
     "@types/react": "16.7.18",
     "@types/react-native": "0.57.25",
+    "@types/react-native-calendars": "^1.20.5",
+    "@types/react-navigation": "^3.0.1",
     "@types/react-test-renderer": "16.0.3",
     "babel-jest": "23.6.0",
     "enzyme": "^3.8.0",
