--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint-fix": "tslint --fix --project tsconfig.json"
   },
   "dependencies": {
+    "moment": "^2.24.0",
     "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
