--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-gesture-handler": "^1.0.12",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9",
+    "realm": "^2.23.0",
     "unstated": "^2.1.1"
   },
   "devDependencies": {
