--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-uuid-generator')
     compile project(':realm')
     compile project(':react-native-gesture-handler')
     compile project(':react-native-vector-icons')
