--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint-fix": "tslint --fix --project tsconfig.json"
   },
   "dependencies": {
+    "@types/react-native-uuid-generator": "^4.0.0",
     "moment": "^2.24.0",
     "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-calendars": "^1.21.0",
     "react-native-gesture-handler": "^1.0.12",
+    "react-native-uuid-generator": "^5.0.0",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9",
     "realm": "^2.23.0",
